--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,8 +18,9 @@
 
   <div>
     <%= form.label :content, style: "display: block" %>
-    <%= form.text_area :content %>
+    <%= form.rich_text_area :content %>
   </div>
+  <br>
 
   <div>
     <%= form.submit %>
