--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,3 +15,7 @@
 
 <div data-controller="hello"></div>
 <div data-controller="goodbye"></div>
+
+<div data-controller="utitlities--md5">
+  <%= link_to "Hash this!", "#", "data-action": "utilities--md5#convert" %>
+</div>
